# BenchEval

./: .editorconfig  .env.example  .env.example.md  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  concept-zero.md  pyproject.toml
.github/workflows/: ci.yml
config/: benchmarks.yaml  experiments.yaml  models.yaml  suites.yaml
config/manifests/: README.md  bfcl-v4-smoke-5.txt  cybench-smoke-5.txt  swe-rebench-smoke-10.txt  swebench-verified-smoke-10.txt  terminal-bench-smoke-5.txt
config/momo/: cybench-showcase.yaml
config/pricing/: 2026-04-15.yaml
config/runs/: cybench-kilo-showcase.yaml  momo-cybench.yaml
config/runtimes/: claude-code.yaml  codex-cli.yaml  harbor-agent.yaml  inspect-api.yaml  mini-swe-agent.yaml  native-api.yaml
config/selftest/core-16/: a4-feature-with-invariants.yaml  c3-backward-compatible-config-migration.yaml  c4-minimal-refactor-under-invariants.yaml  (+2 more)
config/slices/: bfcl-v4-smoke-5.yaml  cybench-smoke-5.yaml  swe-bench-verified-smoke-10.yaml  swe-rebench-smoke-10.yaml  terminal-bench-smoke-5.yaml
docs/: architecture.md  roadmap.md
docs/api/: internal-contracts.md
docs/context/: README.md  adapter-coverage-gap.md  concept-hld.md  concept-zero.md  core-16-admission.yaml  core-16-expansion-plan.md  core-8-admission.yaml  core-8-reward-hack-review.md  cybench-hard-39-run-difficulties.md  external-benchmark-catalog.md  production-readiness.md  production-v1-pilot.md  runtime-invocation-contracts.md
docs/diagrams/: README.md  adapters-components.md  attempt-lifecycle-state.md  config-resolution.md  containers.md  context.md  control-plane-components.md  data-model.md  deployment.md  discovery-sequence.md  external-command-components.md  external-command-sequence.md  four-axis-run-sequence.md  lanes-overview.md  summary-pipeline-sequence.md  system-overview.md
docs/issues/: solver-stall-and-attribution.md
docs/ops/: dev-box-pilot.md  momo-cybench.md
docs/reports/: 2026-06-18-ops-swarm-production.md
results/manifests/: README.md
scripts/: README.md  check-domain-coverage.sh  check-production-v1.sh  compare.py  doctor-pilot.sh  export-config-bundle.sh  external-command-run.sh  extract_summary.py  momo-cybench-live.sh  preflight_disk.sh  render-momo-video.py  render-run-video.py  run-live-pilot-matrix.sh  run_provider_smoke.sh  verify-performance.sh  verify_auth.sh  write_preflight.py
src/bencheval/: __init__.py  adapter_admission.py  admission.py  anthropic_role_shim.py  backends.py  benchmark_plan.py  benchmark_registry.py  bfcl_native_adapter.py  cli.py  compare.py  config_cache.py  contracts.py  control_plane_executor.py  doctor.py  domain.py  evidence.py  evidence_compare.py  exceptions.py  executor.py  export.py  external_command_adapter.py  harbor_adapter.py  harbor_claude_code_npm.py  init.py  inspect_adapter.py  lifecycle.py  live_run_manifest.py  loader.py  manifest.py  model_compare.py  model_registry.py  models.py  momo_cybench.py  path_safety.py  paths.py  planner.py  preflight_report.py  presentation.py  pricing.py  replay.py  (+14 more)
tests/: conftest.py  factories.py  selftest_paths.py  test_a1_verifier.py  test_a2_verifier.py  test_a3_verifier.py  test_a4_verifier.py  test_adapter_admission.py  test_admission.py  test_anthropic_role_shim.py  test_api_contracts.py  test_benchmark_plan.py  test_benchmark_registry.py  test_bfcl_adapter.py  test_c1_verifier.py  test_c2_verifier.py  test_c3_verifier.py  test_c4_verifier.py  test_cli_benchmark.py  test_cli_report.py  test_cli_task.py  test_compare.py  test_compare_cli.py  test_config_cache.py  test_control_plane_interpretation.py  test_core16_admission.py  test_cybench_learnings.py  test_doctor.py  test_domain.py  test_edge_fuzz.py  test_evidence.py  test_evidence_compare.py  test_evidence_io.py  test_export.py  test_external_command_logging.py  test_external_command_verification.py  test_extract_summary_cli.py  test_init.py  test_inspect_adapter.py  test_inspect_harbor.py  (+36 more)
tests/regressions/: test_evidence_finite_scores.py  test_exit_code_policy.py  test_review_f001_public_bundle.py  test_review_f002_cybench_gate_message.py  test_review_f002_swebench_cmd.py  test_review_f004_pilot_exit_codes.py  test_review_round1_f001_f004.py  test_summary_invariants.py
warehouse/views/: attempt_scores.sql  cost_latency.sql  runtime_comparison.sql
(+151 files in other folders)
