[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "bencheval"
version = "0.1.0"
description = "LLM benchmark evaluation tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
eval = [
    "inspect-ai>=0.3.99",
    "inspect-evals",
    "inspect-harbor>=0.4.5",
    "inspect-swe",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.10"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
