[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "bencheval"
version = "0.1.0"
description = "LLM benchmark evaluation tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.7", "pyyaml>=6.0.3"]

[project.scripts]
bencheval = "bencheval.cli:main"

[project.optional-dependencies]
eval = [
    "inspect-ai>=0.3.99",
    "inspect-evals",
    "inspect-harbor>=0.4.5",
    "inspect-swe",
]
analytics = ["duckdb>=1.2.0", "pyarrow>=18.0.0"]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.10"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
